--- a/src/app/web/routes/app-athlet-register/app-athlet-register.component.html
+++ b/src/app/web/routes/app-athlet-register/app-athlet-register.component.html
@@ -3,8 +3,13 @@
         <mat-card class="mat-elevation-z4 m-b-0" fxFlex="400px" fxFlex.xs="90%">
             <mat-card-title class="text-center m-b-24">{{competition.title}}</mat-card-title>
             <mat-card-subtitle class="text-center m-b-24">Регистрация участника</mat-card-subtitle>
-            <mat-card-content>
-                <athlet-register [competition]="competition" (onCreated)="onCreated($event)"></athlet-register>
+            <mat-card-content ngSwitch="competition.stop_registration">
+                <athlet-register *ngSwitchCase="false"
+                                 [competition]="competition"
+                                 (onCreated)="onCreated($event)"></athlet-register>
+                <h3 *ngSwitchDefault class="text-center text-red-400">
+                    Регистрация приостановлена
+                </h3>
             </mat-card-content>
         </mat-card>
     </div>
