--- a/src/app/web/shared/components/competition/competition.component.html
+++ b/src/app/web/shared/components/competition/competition.component.html
@@ -143,6 +143,13 @@
                             Результат по последнему полному кругу
                         </mat-slide-toggle>
                     </p>
+                    <p>
+                        <mat-slide-toggle formControlName="stop_registration"
+                                          color="primary"
+                                          class="m-r-16">
+                            Регистрация остановлена
+                        </mat-slide-toggle>
+                    </p>
                     <div>
                         <button mat-button matStepperPrevious type="button">Назад</button>
                         <button mat-button matStepperNext type="button">Далее</button>
