--- a/src/app/web/routes/dashboard/dashboard-detail/dashboard-detail.component.html
+++ b/src/app/web/routes/dashboard/dashboard-detail/dashboard-detail.component.html
@@ -163,9 +163,8 @@
         <h2>Добавить следующий этап(день) соревнований</h2>
         <p>
             Если соревнование многодневное / поэтапное, необходимо добавить следующий этап, при этому указать новые
-            установочные данные, например, время начали или продолжительность. При этом атлеты зарегистрированные для
-            первого (основного) этапа
-            будут перенесены на все последующие этапы, БЕЗ перерегистрации.
+            установочные данные, например, дату начала, время или продолжительность. При этом атлеты зарегистрированные для
+            первого (основного) этапа будут перенесены на все последующие этапы, БЕЗ перерегистрации.
         </p>
         <app-competition [competition]="competition"
                          [clone]="true"
