--- a/src/app/web/routes/results/results-admin/result-detail/result-detail.component.html
+++ b/src/app/web/routes/results/results-admin/result-detail/result-detail.component.html
@@ -31,7 +31,7 @@
                         Зарегистрировался:
                     </h4>
                     <p>
-                        {{ athlet.created|date:"HH:mm:ss":getTzOffset(competition.timezone) }}
+                        {{ athlet.created.toDate()|date:"HH:mm:ss":getTzOffset(competition.timezone) }}
                     </p>
                 </mat-list-item>
                 <mat-divider></mat-divider>
