--- a/src/app/athlet/athlet.component.tns.html
+++ b/src/app/athlet/athlet.component.tns.html
@@ -4,36 +4,51 @@
 </ActionBar>
 <GridLayout rows="auto, auto, *" columns="*">
     <StackLayout row="0" col="0">
-        <SearchBar [hint]="'Search by full name or number'|L" [text]="searchPhrase"
+        <SearchBar [hint]="'Search by full name or number'|L"
+                   [text]="searchPhrase"
                    (textChange)="onTextChanged($event)"
                    (submit)="onSubmit($event)"
                    (loaded)="searchBarLoaded($event)" #searchBar></SearchBar>
     </StackLayout>
     <StackLayout row="1" col="0">
-        <Button [text]="activityIndicator.busy ? ('Остановить поиск'|L) :('Найти по метке NFC'|L) "
-                (tap)="(activityIndicator.busy = !activityIndicator.busy)"
-                [class.-primary]="!activityIndicator.busy"
-                row="0"
-                col="0"
-                class="btn">
-        </Button>
-        <StackLayout horizontalAlignment="center" [visibility]="activityIndicator.busy ? 'visible' : 'collapse'"
-                     verticalAlignment="center">
-            <ActivityIndicator height="20"
-                               width="20"
-                               #activityIndicator
-                               (busyChange)="onBusyChanged($event)"
-                               style="color: red;"
-                               verticalAlignment="center"
-                               horizontalAlignment="center"
-                               class="activity-indicator m-15"></ActivityIndicator>
-        </StackLayout>
+        <GridLayout columns="2*, *" rows="*,*">
+            <Button row="0" col="0"
+                    [colSpan]="_competition.selected_competition.checking.indexOf('barcode') > -1 ? 1 : 2"
+                    [text]="activityIndicator.busy ? ('Остановить поиск'|L) :('По метке NFC'|L) "
+                    (tap)="(activityIndicator.busy = !activityIndicator.busy)"
+                    [class.-primary]="!activityIndicator.busy"
+                    class="btn" style="width: auto">
+            </Button>
+            <Button row="0" col="1"
+                    *ngIf="_competition.selected_competition.checking.indexOf('barcode') > -1"
+                    (tap)="onScan()"
+                    text="QR"
+                    class="btn">
+            </Button>
+            <StackLayout row="1" colSpan="2"
+                         [visibility]="activityIndicator.busy ? 'visible' : 'collapse'"
+                         horizontalAlignment="center"
+                         verticalAlignment="center">
+                <ActivityIndicator height="20"
+                                   width="20"
+                                   #activityIndicator
+                                   (busyChange)="onBusyChanged($event)"
+                                   style="color: red;"
+                                   verticalAlignment="center"
+                                   horizontalAlignment="center"
+                                   class="activity-indicator m-15"></ActivityIndicator>
+            </StackLayout>
+        </GridLayout>
     </StackLayout>
 
     <ScrollView row="2" col="0">
-        <RadListView [items]="athlets|filter:['fio', 'number']:{search: searchPhrase}" class="items">
-            <ng-template tkListItemTemplate let-athlet="item" let-i="index" let-odd="odd">
-                <GridLayout (tap)="onItemTap(athlet)" columns="60, *" rows="*, *, *, *, *" [class.odd]="odd">
+        <RadListView [items]="athlets|filter:['fio', 'number']:{search: searchPhrase}"
+                     height="100%"
+                     class="items">
+            <ng-template tkListItemTemplate let-athlet="item" let-i="index" let-odd="odd" let-even="even">
+                <GridLayout (tap)="onItemTap(athlet)" columns="60, *" rows="*, *, *, *, *"
+                            [class.odd]="odd"
+                            [class.even]="even">
                     <Label [text]="athlet.number" col="0" rowSpan="4" verticalAlignment="top"
                            horizontalAlignment="center" class="number"></Label>
                     <Label [text]="athlet.class" col="0" row="5" class="option" horizontalAlignment="center"></Label>
