--- a/src/app/web/routes/app-athlet-register/app-athlet-register.component.html
+++ b/src/app/web/routes/app-athlet-register/app-athlet-register.component.html
@@ -3,18 +3,19 @@
         <mat-card class="mat-elevation-z4 m-b-8 m-t-8" fxFlex="400px" fxFlex.xs="90%">
             <mat-card-title class="text-center m-b-24">{{competition.title}}</mat-card-title>
             <mat-card-subtitle class="text-center m-b-24" fxLayout="row" fxLayoutAlign="space-between center">
-                <a (click)="change = false" [routerLink]="" [class.disabled]="!change">Регистрация участника</a>
-                <a (click)="change = true" [routerLink]="" [class.disabled]="change">Сменить номер или класс</a>
+                <a (click)="onSwitchForm($event, 'register');"  href [class.disabled]="action === 'register'">Регистрация участника</a>
+                <a (click)="onSwitchForm($event, 'change');" href [class.disabled]="action === 'change'">Сменить номер или класс</a>
+                {{athlet}}
             </mat-card-subtitle>
             <mat-card-content [ngSwitch]="competition.stop_registration">
 
                 <div *ngSwitchDefault>
-                    <div [ngSwitch]="change">
-                        <athlet-register *ngSwitchCase="false"
+                    <div [ngSwitch]="action">
+                        <athlet-register *ngSwitchCase="'register'"
                                          [competition]="competition"
                                          (onCreated)="onCreated($event)"></athlet-register>
 
-                        <div *ngSwitchCase="true">
+                        <div *ngSwitchCase="'change'">
 
                             <form [formGroup]="getAthletForm"
                                   #formDirective="ngForm" class="my-form">
