--- a/src/app/scan/scan.component.tns.html
+++ b/src/app/scan/scan.component.tns.html
@@ -19,14 +19,14 @@
     </StackLayout>
     <StackLayout row="1" col="0" class="p-t-10">
         <GridLayout columns="2*, *" rows="auto">
-            <TextField [hint]="'Номер участника'|L"
+            <TextField [hint]="'Номер атлета'|L"
                        [text]="input_number"
                        (textChange)="onTextChange($event)"
                        #textField
                        keyboardType="number"
                        maxLength="3"
                        col="0"
-                       row="0"></TextField>
+                       row="0" style="font-size: 30px" class="font-weight-bold text-center"></TextField>
             <Button [text]="'Отметить'|L"
                     (tap)="setNumberMark(textField)"
                     [isEnabled]="last_athlet ? true : false" col="1" row="0"></Button>
