--- a/src/app/web/routes/dashboard/dashboard-detail/dashboard-detail.component.html
+++ b/src/app/web/routes/dashboard/dashboard-detail/dashboard-detail.component.html
@@ -42,7 +42,9 @@
                 <mat-card-header>
                     <mat-card-title>
                         <h4>
-                            <mat-slide-toggle [checked]="!competition.stop_registration" (change)="onStopRegChange($event)">Открыть регистрацию</mat-slide-toggle>
+                            <mat-slide-toggle [checked]="!competition.stop_registration"
+                                              (change)="onStopRegChange($event)">Открыть регистрацию
+                            </mat-slide-toggle>
                         </h4>
                     </mat-card-title>
                     <mat-card-subtitle>
@@ -57,7 +59,7 @@
                 </mat-card-content>
             </mat-card>
 
-            <mat-card fxFlex="50" class="m-r-8">
+            <mat-card *ngIf="(athlets$ | async)" fxFlex="50" class="m-r-8">
                 <mat-card-header>
                     <mat-card-title>
                         <h2>
@@ -147,7 +149,8 @@
         <h2>Добавить следующий этап(день) соревнований</h2>
         <p>
             Если соревнование многодневное / поэтапное, необходимо добавить следующий этап, при этому указать новые
-            установочные данные, например, дату начала, время или продолжительность. При этом атлеты зарегистрированные для
+            установочные данные, например, дату начала, время или продолжительность. При этом атлеты зарегистрированные
+            для
             первого (основного) этапа будут перенесены на все последующие этапы, БЕЗ перерегистрации.
         </p>
         <app-competition [competition]="competition"
@@ -157,66 +160,97 @@
     </mat-tab>
     <mat-tab label="Атлеты">
         <mat-card style="overflow: hidden">
-            <mat-card-header>
-                <mat-card-title>Зарегистрированные спортсмены</mat-card-title>
-                <mat-card-subtitle></mat-card-subtitle>
-            </mat-card-header>
-            <mat-card-content>
-                <form [formGroup]="filterAthlets">
-                    <mat-card class="m-20">
-                        <mat-card-content fxLayout="row wrap">
-                            <mat-form-field fxFlex="100" class="p-16">
-                                <input matInput formControlName="search" placeholder="Фильтр">
-                                <mat-hint>По фамилии или номеру участника</mat-hint>
-                            </mat-form-field>
-                            <div fxFlex="100" class="mat-form-field p-16">
-                                <label id="competition_classes" class="p-r-16">
-                                    Классы участников
-                                </label>
-                                <mat-radio-group formControlName="class" aria-labelledby="competition_classes">
-                                    <mat-radio-button [value]="''"
-                                                      class="p-r-8">Все
-                                    </mat-radio-button>
-                                    <mat-radio-button *ngFor="let _class of competition.classes"
-                                                      [value]="_class"
-                                                      class="p-r-8">{{_class}}</mat-radio-button>
-                                </mat-radio-group>
-                            </div>
-                        </mat-card-content>
-                    </mat-card>
-                </form>
+                <mat-card-header>
+                    <mat-card-title>Зарегистрированные спортсмены</mat-card-title>
+                    <mat-card-subtitle></mat-card-subtitle>
+                </mat-card-header>
+                <mat-card-content>
+                    <form [formGroup]="filterAthlets" *ngIf="(athlets$ | async)">
+                        <mat-card class="m-20">
+                            <mat-card-content fxLayout="row wrap">
+                                <mat-form-field fxFlex="100" class="p-16">
+                                    <input matInput formControlName="search" placeholder="Фильтр">
+                                    <mat-hint>По фамилии или номеру участника</mat-hint>
+                                </mat-form-field>
+                                <div fxFlex="100" class="mat-form-field p-16">
+                                    <label id="competition_classes" class="p-r-16">
+                                        Классы участников
+                                    </label>
+                                    <mat-radio-group formControlName="class" aria-labelledby="competition_classes">
+                                        <mat-radio-button [value]="''"
+                                                          class="p-r-8">Все
+                                        </mat-radio-button>
+                                        <mat-radio-button *ngFor="let _class of competition.classes"
+                                                          [value]="_class"
+                                                          class="p-r-8">{{_class}}</mat-radio-button>
+                                    </mat-radio-group>
+                                </div>
+                            </mat-card-content>
+                        </mat-card>
+                    </form>
 
-                <mat-accordion>
-                    <mat-expansion-panel
-                            *ngFor="let athlet of athlets$|async|filter:['fio', 'number']:{'search': search, 'class': filterAthlets.controls['class'].value}">
-                        <mat-expansion-panel-header fxLayout="row" fxLayoutAlign="start center">
-                            <mat-panel-title fxFlex="70" fxLayoutAlign="start center">
-                                <mat-icon mat-list-icon>person</mat-icon>
-                                <a [routerLink]="['detail', athlet.id]" mat-icon-button color="warn">
-                                    <mat-icon>edit</mat-icon>
-                                </a>
-                                <b class="p-r-8">&nbsp;{{athlet.number}}&nbsp;</b>
-                                {{athlet.fio}}
-                            </mat-panel-title>
-                            <mat-panel-description fxFlex="30" fxLayoutAlign="start center">
-                                {{ athlet.class }}
-                            </mat-panel-description>
-                        </mat-expansion-panel-header>
+                    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+                        <ng-container matColumnDef="number">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Номер</th>
+                            <td mat-cell *matCellDef="let element"><b>{{element.number}}</b></td>
+                        </ng-container>
 
-                        <mat-list>
-                            <mat-list-item *ngIf="competition.checking.indexOf('barcode') > -1" style="height: auto">
-                                <qr-code [value]="getQr(athlet)" [size]="150"></qr-code>
-                            </mat-list-item>
-                            <mat-list-item *ngFor="let item of athlet|keyvalue">
-                                <h4 mat-line>{{item.key}}</h4>
-                                <p mat-line> {{item.value}} </p>
-                            </mat-list-item>
-                            <mat-divider></mat-divider>
-                        </mat-list>
+                        <ng-container matColumnDef="fio">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Имя</th>
+                            <td mat-cell *matCellDef="let element">{{element.fio}}</td>
+                        </ng-container>
 
-                    </mat-expansion-panel>
-                </mat-accordion>
-            </mat-card-content>
-        </mat-card>
+                        <ng-container matColumnDef="phone">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Телефон</th>
+                            <td mat-cell *matCellDef="let element">{{element.phone}}</td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="class">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Класс</th>
+                            <td mat-cell *matCellDef="let element">{{element.class}}</td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="created">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Зарегистрировался</th>
+                            <td mat-cell *matCellDef="let element">{{element.created.toDate()|date}}</td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+                    </table>
+                    <!--
+                                    <mat-accordion>
+                                        <mat-expansion-panel
+                                                *ngFor="let athlet of athlets$|async|filter:['fio', 'number']:{'search': search, 'class': filterAthlets.controls['class'].value}">
+                                            <mat-expansion-panel-header fxLayout="row" fxLayoutAlign="start center">
+                                                <mat-panel-title fxFlex="70" fxLayoutAlign="start center">
+                                                    <mat-icon mat-list-icon>person</mat-icon>
+                                                    <a [routerLink]="['detail', athlet.id]" mat-icon-button color="warn">
+                                                        <mat-icon>edit</mat-icon>
+                                                    </a>
+                                                    <b class="p-r-8">&nbsp;{{athlet.number}}&nbsp;</b>
+                                                    {{athlet.fio}}
+                                                </mat-panel-title>
+                                                <mat-panel-description fxFlex="30" fxLayoutAlign="start center">
+                                                    {{ athlet.class }}
+                                                </mat-panel-description>
+                                            </mat-expansion-panel-header>
+
+                                            <mat-list>
+                                                <mat-list-item *ngIf="competition.checking.indexOf('barcode') > -1" style="height: auto">
+                                                    <qr-code [value]="getQr(athlet)" [size]="150"></qr-code>
+                                                </mat-list-item>
+                                                <mat-list-item *ngFor="let item of athlet|keyvalue">
+                                                    <h4 mat-line>{{item.key}}</h4>
+                                                    <p mat-line> {{item.value}} </p>
+                                                </mat-list-item>
+                                                <mat-divider></mat-divider>
+                                            </mat-list>
+
+                                        </mat-expansion-panel>
+                                    </mat-accordion>
+                                    -->
+                </mat-card-content>
+</mat-card>
     </mat-tab>
 </mat-tab-group>
