--- a/src/app/app.component.tns.html
+++ b/src/app/app.component.tns.html
@@ -4,7 +4,7 @@
             <GridLayout [ngSwitch]="auth.user?.isAnonymous" columns="auto, *">
                 <Image *ngSwitchCase="false" [src]="auth.user?.photoURL" col="0" class="logo" stretch="aspectFit"></Image>
                 <Image *ngSwitchDefault src="font://&#xf21b;" col="0" class="fas logo" stretch="aspectFit"></Image>
-                <Label [text]="auth.params.display_name" col="1" verticalAlignment="center" textWrap="true"></Label>
+                <Label [text]="auth.params.displayName" col="1" verticalAlignment="center" textWrap="true"></Label>
             </GridLayout>
         </StackLayout>
         <ScrollView row="1">
