--- a/src/app/home/home.component.tns.html
+++ b/src/app/home/home.component.tns.html
@@ -6,8 +6,9 @@
                 ios.position="right"
                 android.position="popup"></ActionItem>
     <ActionItem [text]="'About'|L"
-                [nsRouterLink]="['/home/about']"
+                (tap)="navigateTo('/home/about')"
                 ios.position="right"
                 android.position="popup"></ActionItem>
 </ActionBar>
+
 <router-outlet></router-outlet>
