--- a/src/app/app.component.tns.html
+++ b/src/app/app.component.tns.html
@@ -40,7 +40,7 @@
                             columns="auto, *"
                             class="side-label">
                     <Label col="0" text="&#xf0c0;" class="fas"></Label>
-                    <Label [text]="'Athlets'|L" col="1"></Label>
+                    <Label [text]="'Athletes'|L" col="1"></Label>
                 </GridLayout>
 
                 <StackLayout class="m-10"></StackLayout>
