--- a/src/app/enter/enter-secret/enter-secret.component.tns.html
+++ b/src/app/enter/enter-secret/enter-secret.component.tns.html
@@ -3,11 +3,12 @@
                text="{{getCode()}}"
                (textChange)="onCodeChange($event)"
                (returnPress)="onCodeLogin()"
-               hint="Код соревнования"
+               [hint]="'Competition code'|L"
                maxLength="6"
                autocorrect="false"
                keyboardType="number"></TextField>
-    <Button (tap)="onCodeLogin()" [isEnabled]="(code ? code.toString().length == 6 : false) && !pending" col="1" row="0" text="Enter" class="-primary"></Button>
-    <Button (tap)="onScan()" col="0" colSpan="2" row="1" text="Scan QR Code" class="-grey"></Button>
+    <Button (tap)="onCodeLogin()" [isEnabled]="(code ? code.toString().length == 6 : false) && !pending"
+            col="1" row="0" [text]="'Enter'|L" class="-primary"></Button>
+    <Button (tap)="onScan()" col="0" colSpan="2" row="1" [text]="'Scan QR code'|L" class="-grey"></Button>
 </GridLayout>
 
