--- a/src/app/enter/enter.component.tns.html
+++ b/src/app/enter/enter.component.tns.html
@@ -19,11 +19,11 @@
                        text="{{getPhone()}}"
                        (textChange)="onPhoneNumberChange($event)"
                        (returnPress)="onPhoneNumberLogin()"
-                       hint="Номер телефона"
+                       [hint]="'Phone number'|L"
                        maxLength="10"
                        autocorrect="false"
                        keyboardType="number"></TextField>
-            <Button (tap)="onPhoneNumberLogin()" col="1" row="0" text="Send sms" class="-primary"></Button>
+            <Button (tap)="onPhoneNumberLogin()" col="1" row="0" [text]="'Send sms'|L" class="-primary"></Button>
         </GridLayout>
     </StackLayout>
     <StackLayout row="2" col="0" colSpan="2">
