--- a/src/app/home/about/about.component.tns.html
+++ b/src/app/home/about/about.component.tns.html
@@ -1,16 +1,14 @@
 <TextView editable="false">
     <FormattedString>
-        <Span text="
-        Прототип приложения для организации соревнований, процесс прохождения которого связан с отметками времени на контрольных точках.
-
-        Победителями считаются атлеты прошедшие большее (все) кол-во контрольных точек за заменьшее кол-во времени, в порядке следования точек."></Span>
+        <Span [text]="('A prototype application for the organization of competitions, the process of which is associated with the time stamps on the control points.\n'+
+'The winners are the athletes who have passed the greater (all) number of control points for a smaller number of time, in the order of points.')|L"></Span>
     </FormattedString>
 </TextView>
 <Button (tap)="onMailTo()" height="120" class="p-10 btn -outline -active text-left">
     <FormattedString>
-        <Span text="Предложения и пожелания отправляйте на адрес "></Span>
+        <Span [text]="'Suggestions and suggestions send to the address'|L "></Span>
         <Span text="agestart@gmail.com " fontWeight="Bold"></Span>
-        <Span text="либо в telegram "></Span>
-        <Span text="ivanfed1" fontWeight="Bold"></Span>
+        <Span [text]="'or to the telegram'|L "></Span>
+        <Span text="@ivanfed1" fontWeight="Bold"></Span>
     </FormattedString>
 </Button>
