--- a/src/app/home/stat/stat.component.tns.html
+++ b/src/app/home/stat/stat.component.tns.html
@@ -1,11 +1,13 @@
 <StackLayout [ngSwitch]="competition" class="p-10">
     <StackLayout *ngSwitchDefault>
         <Label class="h1" [text]="competition.title" textWrap="true"></Label>
-        <Label [text]="'Всего зарегестрированно участников: ' + athlets_count"></Label>
-        <Label *ngFor="let _class of competition.classes" [text]="'Класс ' + _class + ': ' + (by_class_count.hasOwnProperty(_class) ? by_class_count[_class] : 'wait')"></Label>
-        <Button class="btn -primary scan" [text]="'Сканировать'|L" [nsRouterLink]="['/scan']"></Button>
+        <Label [text]="('Total registered athletes: '|L) + athlets_count"></Label>
+        <Label *ngFor="let _class of competition.classes" [text]="('Class: '|L) + _class + ' ' + (by_class_count.hasOwnProperty(_class) ? by_class_count[_class] : ('wait'|L))"></Label>
+        <Button class="btn -primary scan" [text]="'Scan'|L" [nsRouterLink]="['/scan']"></Button>
     </StackLayout>
     <StackLayout *ngSwitchCase="null">
-        <Button class="btn -primary scan" [text]="'Назначить\nсоревнование'|L" [nsRouterLink]="['competitions']"></Button>
+        <Button [text]="'Select\ncompetition'|L"
+                [nsRouterLink]="['competitions']"
+                class="btn -primary scan"></Button>
     </StackLayout>
 </StackLayout>
