--- a/src/app/scan/found-dialog/found-dialog.component.tns.html
+++ b/src/app/scan/found-dialog/found-dialog.component.tns.html
@@ -1,10 +1,10 @@
 <StackLayout margin="24" horizontalAlignment="center" verticalAlignment="center">
     <Label [text]="msg" class="number p-b-12" horizontalAlignment="center" [class.-warning]="error" textWrap="true"></Label>
-    <Label [text]="'Номер: ' + athlet.number" class="number p-b-12" horizontalAlignment="center"></Label>
-    <Label [text]="'Имя: ' + athlet.fio"></Label>
-    <Label [text]="'Класс: ' + athlet.class"></Label>
+    <Label [text]="('Number: '|L) + athlet.number" class="number p-b-12" horizontalAlignment="center"></Label>
+    <Label [text]="('Name: '|L) + athlet.fio"></Label>
+    <Label [text]="('Class: '|L) + athlet.class"></Label>
     <StackLayout orientation="horizontal" marginTop="12">
-        <Button [text]="'Открыть'" (tap)="onOpen()" class="btn" width="40%"></Button>
-        <Button [text]="'Закрыть'" (tap)="onClose()" class="btn -primary" width="40%"></Button>
+        <Button [text]="'Open'|L" (tap)="onOpen()" class="btn" width="40%"></Button>
+        <Button [text]="'Close'|L" (tap)="onClose()" class="btn -primary" width="40%"></Button>
     </StackLayout>
 </StackLayout>
