--- a/src/app/scan/scan.component.tns.html
+++ b/src/app/scan/scan.component.tns.html
@@ -1,4 +1,4 @@
-<ActionBar [title]="'Athlets'|L">
+<ActionBar [title]="'Athletes'|L">
     <NavigationButton icon="res://round_menu_black_24"
                       (tap)="onDrawerButtonTap()"></NavigationButton>
     <ActionItem [text]="'Local log'|L"
@@ -8,18 +8,19 @@
 </ActionBar>
 <GridLayout rows="auto, auto, auto, auto, *" columns="*">
     <StackLayout [ngSwitch]="current_checkpoint" row="0" col="0" class="p-t-10">
-        <Label *ngSwitchCase="null" text="Это устройство не назначено считывателем" class="text-center warning"></Label>
+        <Label *ngSwitchCase="null" [text]="'This device is not assigned to a NFC reader'|L"
+               class="text-center warning"></Label>
         <Label *ngSwitchDefault class="text-center" textWrap="true">
             <FormattedString>
-                <span [text]="'Название: ' + current_checkpoint.title + '&#xa;'" class="font-weight-bold"></span>
-                <span [text]="'Порядок: ' + current_checkpoint.order + '&#xa;'"></span>
-                <span [text]="'Класс: ' + (current_checkpoint.classes|join:', ') + '&#xa;'"></span>
+                <span [text]="('Title: '|L) + current_checkpoint.title + '&#xa;'" class="font-weight-bold"></span>
+                <span [text]="('Order: '|L)  + current_checkpoint.order + '&#xa;'"></span>
+                <span [text]="('Class: '|L)  + (current_checkpoint.classes|join:', ') + '&#xa;'"></span>
             </FormattedString>
         </Label>
     </StackLayout>
     <StackLayout row="1" col="0" class="p-t-10">
         <GridLayout columns="2*, *" rows="auto">
-            <TextField [hint]="'Номер атлета'|L"
+            <TextField [hint]="'Athlete number'|L"
                        [text]="input_number"
                        (textChange)="onTextChange($event)"
                        #textField
@@ -32,7 +33,7 @@
                     [isEnabled]="last_athlet ? true : false" col="1" row="0"></Button>
         </GridLayout>
     </StackLayout>
-    <Button [text]="activityIndicator.busy ? 'Прекратить сканирование NFC': 'Сканировать метку NFC'|L"
+    <Button [text]="activityIndicator.busy ? ('Stop scanning NFC'|L): ('Scanning NFC tag'|L)"
             (tap)="(activityIndicator.busy = !activityIndicator.busy)"
             [rowSpan]="_competition.selected_competition.checking.indexOf('barcode') > -1 ? 1 : 2"
             [class.-primary]="!activityIndicator.busy"
