--- a/src/app/enter/enter.component.tns.html
+++ b/src/app/enter/enter.component.tns.html
@@ -22,7 +22,7 @@
                        [hint]="'Phone number'|L"
                        maxLength="10"
                        autocorrect="false"
-                       keyboardType="number"></TextField>
+                       keyboardType="phone"></TextField>
             <Button (tap)="onPhoneNumberLogin()" col="1" row="0" [text]="'Send sms'|L" class="-primary"></Button>
         </GridLayout>
     </StackLayout>
